# w3c-etl-pipeline

./: .env.azure.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  databricks.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _reusable-lint.yml  _reusable-terraform.yml  _reusable-test.yml  cd.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml
airflow/: .env.example  Dockerfile  docker-compose.yaml  requirements.txt
airflow/dbt/: .user.yml  profiles.yml
airflow/great_expectations/: run_checkpoint.py
docs/: credentials.md
plans/: architecture-reference.md  azure-cloud-native-single-pipeline.md  azure-databricks-cloud-platform(deprecated).md  azure-databricks-cloud-platform.md  azure-infrastructure-reference.md  ci-cd-reference.md  csv_data_quality_audit.md  databricks-hybrid-wiring.md  dbt-migration-reference.md  fact-webrequest-dead-col-cleanup(completed).md  fact-webrequest-dead-col-cleanup.md  improvements.md  key-metrics-reference.md  phase3-4-issues.md  testing-suite-reference.md
tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_01_bronze_ingestion.py  test_02_silver_enrichment.py  test_03_export_warehouse.py  test_dag_integrity.py  test_dbt_tsql_migration.py  test_dlt_bronze.py  test_dlt_silver.py  test_export_azure_operators.py  test_export_dimensions.py  test_export_dimensions_azure.py  test_export_warehouse.py  test_integration.py  test_jdbc_export_azure.py  test_terraform_part_a.py  test_terraform_part_b.py  test_transformations.py  test_w3c_parser.py
(+149 files in other folders)
