[project]
name = "w3c-etl-pipeline"
version = "3.0.0"
description = "Spark → PostgreSQL → dbt pipeline for IIS W3C web log analytics"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_configs = false
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "airflow.dags.w3c.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "airflow.spark.jobs.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that need Docker stack running (deselect with '-m \"not integration\"')",
    "dag_integrity: marks tests that need Airflow environment (deselect with '-m \"not dag_integrity\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:airflow.*",
    "ignore::DeprecationWarning:pyspark.*",
    'ignore::DeprecationWarning:google\._upb\._message.*',
]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
